--- a/application/build.gradle
+++ b/application/build.gradle
@@ -1,7 +1,7 @@
 plugins {
-    id 'java'
+    id 'java-library'
 }
 
 dependencies {
-    implementation project(':domain')
+    api project(':domain')
 }
